# green-glamping

./: .gitignore  README.md
multibot/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
multibot/app/: __init__.py  config.py  main.py
multibot/app/admin/: auth_utils.py  channel_info.py
multibot/app/api/: webhooks.py
multibot/app/bot/: anti_injection.py  classifier.py  handoff.py  humanizer.py  learner.py  memory.py  multimodal.py  pipeline.py  responder.py  response_parser.py  welcome.py
multibot/app/channels/: base.py  evolution.py  poller.py  registry.py  telegram.py  whatsapp_official.py  whatsapp_unofficial.py
multibot/app/core/: logging.py  media_keys.py  media_store.py  passwords.py  security.py  template_render.py  tenant.py
multibot/app/db/: base.py  session.py
multibot/app/llm/: base.py  minimax.py  openai_compat.py  prompts.py  router.py  usage_tracker.py
multibot/app/mcp/: server.py  stub.py
multibot/app/models/: __init__.py  (+11 more)
multibot/data/: README.md
multibot/docs/: canales.md  cutover.md  deploy.md  learner.md  onboarding.md  plans.md  runbook.md  troubleshooting.md
multibot/scripts/: create_tenant.py  onboard_tenant.py  run_learner.py  seed_green_glamping.py  test_llm.py
multibot/tests/: conftest.py  test_anti_injection.py  test_classifier.py  test_handoff.py  test_humanizer.py  test_learner.py  test_media_keys.py  test_pipeline_dry_run.py  test_pipeline_llm_first.py  test_plans_media_integration.py  test_response_parser.py  test_simulator_clones_production.py  test_template_render.py
(+168 files in other folders)
